# space_points

./: .gitignore  cleaning.py  main.py  output.csv  points.csv  pyproject.toml  sample_extract.py
datasets/: Café-lat:-22.6138288long:-48.6001332.csv  abacate-lat:-22.7999905long:-48.6329692.csv  abacate-lat:-23.1926664long:-48.8879905.csv  café-lat:-22.8119643long:-48.199386.csv  café-lat:-22.8308688long:-48.0636492.csv  citrus-lat:-22.6242139long:-48.2980924.csv  citrus-lat:-22.8984788long:-48.7390727.csv  citrus-lat:-22.9088183long:-48.5396188.csv  citrus-lat:-22.9889705long:-48.7786837.csv  citrus-lat:-23.1175032long:-48.741323.csv  citrus-lat:-23.2133859long:-48.4646525.csv  citrus-lat:-23.3802474long:-48.9127284.csv  eucalipto-lat:-22.4962489long:-48.51924.csv  eucalipto-lat:-22.8067598long:-48.3739606.csv  eucalipto-lat:-23.0168264long:-48.2348555.csv  eucalipto-lat:-23.0902656long:-48.5649457.csv  eucalipto-lat:-23.4082509long:-48.7497324.csv  groub_data.py  master_combined.csv  teste.ipynb
