[project]
name = "geospace-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.6.10",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=6.30.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
